test/parser/trailing-decimal-mark.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:12: error: expected identifier, got ';'
var pi = 3.;
